--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              // "node_modules/bootstrap/dist/js/jquery-3.3.1.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -87,9 +90,13 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_module/bootstrap/dist/js/jquery-3.3.1.min.js",
+              "node_module/bootstrap/dist/js/bootstrap.min.js"
+            ]
           }
         },
         "lint": {
